Adiciona menu inicial e estilos base para elementos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- * Fontes -->
     <!--
         _ Ma Shan Zheng   -> para caracteres em mandarim
+        _ monoton         -> título na primeira página (português)
         _ Noto Sans JP    -> texto geral
         _ Girassol        -> títulos internos
     -->
@@ -20,11 +21,30 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Girassol&family=Ma+Shan+Zheng&family=Noto+Sans+JP:wght@400;700;900&display=swap"
         rel="stylesheet">
-        
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
+    <Aside>
+        <div class="main-content menu-content">
 
+            <div class="logo">
+                <h1>Nhac! </h1>
+                <h1 class="mandarim"> 嗦嗦</h1>
+            </div>
+
+            <nav>
+                <ul>
+                    <li><a href="#intro">Nhac! Nhac!</a></li>
+                    <li><a href="#salgados">Pratos Salgados</a></li>
+                    <li><a href="#doces">Pratos Doces</a></li>
+                    <li><a href="#form"></a></li>
+                </ul>
+            </nav>
+        </div>
+    </Aside>
 </body>
 
 </html>
