Atualiza estilos para menu, adição de efeito affter para mostrar ideogramas

--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
 </head>
 
 <body>
-    <Aside>
-        <div class="main-content menu-content">
+    <Aside class="menu">
+        <div class="menu-content main-content ">
 
             <div class="logo">
-                <h1>Nhac! </h1>
-                <h1 class="mandarim"> 嗦嗦</h1>
+                <h1><a href="#logo" >Nhac!</a></h1>
+                <h1 class="mandarim"><a href="#logo">嗦嗦!</a></h1>
             </div>
 
             <nav>
                 <ul>
-                    <li><a href="#intro">Nhac! Nhac!</a></li>
+                    <li><a href="#intro" class="nhac"></a></li>
                     <li><a href="#salgados">Pratos Salgados</a></li>
                     <li><a href="#doces">Pratos Doces</a></li>
-                    <li><a href="#form"></a></li>
+                    <li><a href="#form">Enviar um prato</a></li>
                 </ul>
             </nav>
         </div>
