Atualiza as animações do menu

--- a/index.html
+++ b/index.html
@@ -28,23 +28,37 @@
 
 <body>
     <Aside class="menu">
+        <div class="sustein">
         <div class="menu-content main-content ">
 
             <div class="logo">
-                <h1><a href="#logo" >Nhac!</a></h1>
+                <h1><a href="#logo">Nhac!</a></h1>
                 <h1 class="mandarim"><a href="#logo">嗦嗦!</a></h1>
             </div>
 
             <nav>
                 <ul>
-                    <li><a href="#intro" class="nhac"></a></li>
-                    <li><a href="#salgados">Pratos Salgados</a></li>
-                    <li><a href="#doces">Pratos Doces</a></li>
-                    <li><a href="#form">Enviar um prato</a></li>
+                    <!-- <div class="teste"><a href="#intro" class="nhac"></a></div>
+                    <div class="teste"><a href="#salgados" class="nhac"></a></div>
+                    <div class="teste"><a href="#doces" class="nhac"></a></div>
+                    <div class="teste"><a href="#form" class="nhac"></a></div> -->
+                    <li><a href="#intro" class="nhac">...</a></li>
+                    <li><a href="#salgados" class="salgados"></a></li>
+                    <li><a href="#doces" class="doces"></a></li>
+                    <li><a href="#form" class="enviar"></a></li>
                 </ul>
             </nav>
         </div>
+    </div>
     </Aside>
+
+    <section class="section main" id="logo">
+
+    </section>
+
+    <section class="section" id="intro">
+
+    </section>
 </body>
 
 </html>
