Adiciona intro section

--- a/index.html
+++ b/index.html
@@ -29,34 +29,51 @@
 <body>
     <Aside class="menu">
         <div class="sustein">
-        <div class="menu-content main-content ">
+            <div class="menu-content  ">
 
-            <div class="logo">
-                <h1><a href="#logo">Nhac!</a></h1>
-                <h1 class="mandarim"><a href="#logo">嗦嗦!</a></h1>
-            </div>
+                <div class="logo">
+                    <h1><a href="#logo">Nhac!</a></h1>
+                    <h1 class="mandarim"><a href="#logo">嗦嗦!</a></h1>
+                </div>
 
-            <nav>
-                <ul>
-                    <!-- <div class="teste"><a href="#intro" class="nhac"></a></div>
+                <nav>
+                    <ul>
+                        <!-- <div class="teste"><a href="#intro" class="nhac"></a></div>
                     <div class="teste"><a href="#salgados" class="nhac"></a></div>
                     <div class="teste"><a href="#doces" class="nhac"></a></div>
                     <div class="teste"><a href="#form" class="nhac"></a></div> -->
-                    <li><a href="#intro" class="nhac">...</a></li>
-                    <li><a href="#salgados" class="salgados"></a></li>
-                    <li><a href="#doces" class="doces"></a></li>
-                    <li><a href="#form" class="enviar"></a></li>
-                </ul>
-            </nav>
+                        <li><a href="#intro" class="nhac">...</a></li>
+                        <li><a href="#salgados" class="salgados"></a></li>
+                        <li><a href="#doces" class="doces"></a></li>
+                        <li><a href="#form" class="enviar"></a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
     </Aside>
 
-    <section class="section main" id="logo">
-
+    <div class="menu-spacing "></div>
+    <section class="section main-bg " id="logo">
+        <div class="intro">
+        <div class="intro-tittle">
+            <h2 class="nhac-tittle">Nhac!</h2>
+            <h2 class="nhac-tittle">Nhac!</h2>
+            <h1 class="mandarim">嗦嗦!</h1>
+            <h1 class="mandarim">嗦嗦!</h1>
+            <p>
+                Um pequeno gostinho da culinária chinesa em qualquer lugar onde você estiver... 
+            </p>
+        </div>
+        <div class="intro-img">
+            <img 
+                src="./assets/img/main-cook.svg"
+                alt="imagem centrar, um desenho de um chef de cozinha com uma faca e uma concha"
+            >
+        </div>
+    </div>
     </section>
 
-    <section class="section" id="intro">
+    <section class=" secondary-bg" id="intro">
 
     </section>
 </body>
