Corrige erros de dimencionamento na página inicial

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <Aside class="menu">
         <div class="sustein">
-            <div class="menu-content  ">
+            <div class="menu-content main-content ">
 
                 <div class="logo">
                     <h1><a href="#logo">Nhac!</a></h1>
@@ -52,9 +52,8 @@
         </div>
     </Aside>
 
-    <div class="menu-spacing "></div>
-    <section class="section main-bg " id="logo">
-        <div class="intro">
+    <section class="section main-bg" id="logo">
+        <div class="intro main-content">
         <div class="intro-tittle">
             <h2 class="nhac-tittle">Nhac!</h2>
             <h2 class="nhac-tittle">Nhac!</h2>
