Adiciona segunda página, com textos de introdução

--- a/index.html
+++ b/index.html
@@ -72,8 +72,36 @@
     </div>
     </section>
 
-    <section class=" secondary-bg" id="intro">
-
+    <section class="section main-bg" id="intro">
+        <div class="menu-spacing"></div>
+        <h2 class="mandarim intro2-tittle">真好吃!</h2>
+        <div class="intro main-content">
+            <div class="intro-img2">
+                <p >
+                    A china possuí uma culinária muito variada, sendo umas das mais antigas e também exóticas do planeta. 
+                    Em sua antiguidade, os grandes imperadores realizavam diversas festas, e nelas costumavam servir grandes banquetes, como forma de oferenda para os deuses e espíritos, para que em retorno o povo recebesse sucesso e prosperidade nas colheitas.
+                </p>
+                <img 
+                    class="img-intro"
+                    src="./assets/img/cook-intro.svg"
+                    alt="imagem centrar, um desenho de um chef de cozinha com uma faca e uma concha"
+                >
+            </div>
+            <div >
+                
+                <p class="intro2-p">
+                    Culinária essa que é muito famosa, devido a grande riquezas de detalhes, e muitas sutilezas minuciosas, que tornam o prato uma riqueza de sabores, cores e texturas. Com isso vale ressaltam que é muito comum encontrar comidas que combinam o doce e salgado, agridoce e picante, macio e crocante, frio e quente e muitas outras combinações. 
+                </p>
+                <p class="intro2-p">
+                    Na cultura chinesa se busca o equilíbrio nas criações de pratos, envolvendo não só os cinco elementos fogo (amargor), madeira (azedo), metal (picante), terra (doce) e a água (salgado), mas também o Ying yang. 
+                    O Ying e Yang se complementam para equilibrar pólos opostos, já os elementos advém da crença que estamos cercados por cinco campos de energia que devem estar equilibrados.
+                </p>
+                <p class="intro2-p">
+                    E isso também se deve a medicina chinesa, que relaciona a saúde e tratamentos dos pacientes com os estados dos cinco elementos dentro do corpo dessa pessoa. Sendo que a deficiência ou a demasia de qualquer dos elementos pode levar o indivíduo a doença. Portanto a culinária chinesa é muito profunda e diversa, contendo uma infinidade de pratos e sabores.
+                </p>
+                
+            </div>
+        </div>
     </section>
 </body>
 
