Adiciona seção de pratos salgados

--- a/index.html
+++ b/index.html
@@ -54,22 +54,20 @@
 
     <section class="section main-bg" id="logo">
         <div class="intro main-content">
-        <div class="intro-tittle">
-            <h2 class="nhac-tittle">Nhac!</h2>
-            <h2 class="nhac-tittle">Nhac!</h2>
-            <h1 class="mandarim">嗦嗦!</h1>
-            <h1 class="mandarim">嗦嗦!</h1>
-            <p>
-                Um pequeno gostinho da culinária chinesa em qualquer lugar onde você estiver... 
-            </p>
+            <div class="intro-tittle">
+                <h2 class="nhac-tittle">Nhac!</h2>
+                <h2 class="nhac-tittle">Nhac!</h2>
+                <h1 class="mandarim">嗦嗦!</h1>
+                <h1 class="mandarim">嗦嗦!</h1>
+                <p>
+                    Um pequeno gostinho da culinária chinesa em qualquer lugar onde você estiver...
+                </p>
+            </div>
+            <div class="intro-img">
+                <img src="./assets/img/main-cook.svg"
+                    alt="imagem centrar, um desenho de um chef de cozinha com uma faca e uma concha">
+            </div>
         </div>
-        <div class="intro-img">
-            <img 
-                src="./assets/img/main-cook.svg"
-                alt="imagem centrar, um desenho de um chef de cozinha com uma faca e uma concha"
-            >
-        </div>
-    </div>
     </section>
 
     <section class="section main-bg" id="intro">
@@ -77,29 +75,115 @@
         <h2 class="mandarim intro2-tittle">真好吃!</h2>
         <div class="intro main-content">
             <div class="intro-img2">
-                <p >
-                    A china possuí uma culinária muito variada, sendo umas das mais antigas e também exóticas do planeta. 
-                    Em sua antiguidade, os grandes imperadores realizavam diversas festas, e nelas costumavam servir grandes banquetes, como forma de oferenda para os deuses e espíritos, para que em retorno o povo recebesse sucesso e prosperidade nas colheitas.
+                <p>
+                    A china possuí uma culinária muito variada, sendo umas das mais antigas e também exóticas do
+                    planeta.
+                    Em sua antiguidade, os grandes imperadores realizavam diversas festas, e nelas costumavam servir
+                    grandes banquetes, como forma de oferenda para os deuses e espíritos, para que em retorno o povo
+                    recebesse sucesso e prosperidade nas colheitas.
                 </p>
-                <img 
-                    class="img-intro"
-                    src="./assets/img/cook-intro.svg"
-                    alt="imagem centrar, um desenho de um chef de cozinha com uma faca e uma concha"
-                >
+                <img class="img-intro" src="./assets/img/cook-intro.svg"
+                    alt="imagem centrar, um desenho de um chef de cozinha com uma faca e uma concha">
             </div>
-            <div >
-                
+            <div>
+
                 <p class="intro2-p">
-                    Culinária essa que é muito famosa, devido a grande riquezas de detalhes, e muitas sutilezas minuciosas, que tornam o prato uma riqueza de sabores, cores e texturas. Com isso vale ressaltam que é muito comum encontrar comidas que combinam o doce e salgado, agridoce e picante, macio e crocante, frio e quente e muitas outras combinações. 
+                    Culinária essa que é muito famosa, devido a grande riquezas de detalhes, e muitas sutilezas
+                    minuciosas, que tornam o prato uma riqueza de sabores, cores e texturas. Com isso vale ressaltam que
+                    é muito comum encontrar comidas que combinam o doce e salgado, agridoce e picante, macio e crocante,
+                    frio e quente e muitas outras combinações.
                 </p>
                 <p class="intro2-p">
-                    Na cultura chinesa se busca o equilíbrio nas criações de pratos, envolvendo não só os cinco elementos fogo (amargor), madeira (azedo), metal (picante), terra (doce) e a água (salgado), mas também o Ying yang. 
-                    O Ying e Yang se complementam para equilibrar pólos opostos, já os elementos advém da crença que estamos cercados por cinco campos de energia que devem estar equilibrados.
+                    Na cultura chinesa se busca o equilíbrio nas criações de pratos, envolvendo não só os cinco
+                    elementos fogo (amargor), madeira (azedo), metal (picante), terra (doce) e a água (salgado), mas
+                    também o Ying yang.
+                    O Ying e Yang se complementam para equilibrar pólos opostos, já os elementos advém da crença que
+                    estamos cercados por cinco campos de energia que devem estar equilibrados.
                 </p>
                 <p class="intro2-p">
-                    E isso também se deve a medicina chinesa, que relaciona a saúde e tratamentos dos pacientes com os estados dos cinco elementos dentro do corpo dessa pessoa. Sendo que a deficiência ou a demasia de qualquer dos elementos pode levar o indivíduo a doença. Portanto a culinária chinesa é muito profunda e diversa, contendo uma infinidade de pratos e sabores.
+                    E isso também se deve a medicina chinesa, que relaciona a saúde e tratamentos dos pacientes com os
+                    estados dos cinco elementos dentro do corpo dessa pessoa. Sendo que a deficiência ou a demasia de
+                    qualquer dos elementos pode levar o indivíduo a doença. Portanto a culinária chinesa é muito
+                    profunda e diversa, contendo uma infinidade de pratos e sabores.
                 </p>
-                
+
+            </div>
+        </div>
+    </section>
+    <section class="section secondary-bg salgados-sec" id="salgados">
+        <div class="menu-spacing"></div>
+        <div class="menu-spacing"></div>
+        <div class="main-content">
+            <h2>Últimos pratos salgados adicionados</h2>
+            <div class="grid-salgados">
+                <div class="card-prato um">
+                    <div class="img-salgados">
+                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>30min</p>
+                            <p>2 porções</p>
+                        </div>
+                        <h3>FRANGO XADREZ</h3>
+                    </div>
+                </div>
+
+                <div class="card-prato dois">
+                    <div class="img-salgados">
+                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>30min</p>
+                            <p>2 porções</p>
+                        </div>
+                        <h3>FRANGO XADREZ</h3>
+                    </div>
+                </div>
+
+                <div class="card-prato tres">
+                    <div class="img-salgados">
+                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>30min</p>
+                            <p>2 porções</p>
+                        </div>
+                        <h3>FRANGO XADREZ</h3>
+                    </div>
+                </div>
+
+                <div class="card-prato quatro">
+                    <div class="img-salgados">
+                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>30min</p>
+                            <p>2 porções</p>
+                        </div>
+                        <h3>FRANGO XADREZ</h3>
+                    </div>
+                </div>
+
+                <div class="card-prato cinco">
+                    <div class="img-salgados">
+                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div >
+                            <p>30min</p>
+                            <p>2 porções</p>
+                        </div>
+                        <h3>FRANGO XADREZ</h3>
+                        <p>
+                            Conta a história que o prato tem sua origem na província de Si Chuan, localizada na parte ocidental da China. Dentre os ingredientes que permanecem na receita até hoje estão o frango, o molho de soja (shoyu) e o amendoim. Os demais ingredientes podem variar de acordo com a região e o gosto do povo.
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
