Finaliza a seção de pratos salgados

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>30min</p>
-                            <p>2 porções</p>
+                            <p>⏲30min</p>
+                            <p>☑ 2 porções</p>
                         </div>
-                        <h3>FRANGO XADREZ</h3>
+                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
                     </div>
                 </div>
 
@@ -135,10 +135,10 @@
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>30min</p>
-                            <p>2 porções</p>
+                            <p>⏲30min</p>
+                            <p>☑ 2 porções</p>
                         </div>
-                        <h3>FRANGO XADREZ</h3>
+                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
                     </div>
                 </div>
 
@@ -148,10 +148,10 @@
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>30min</p>
-                            <p>2 porções</p>
+                            <p>⏲30min</p>
+                            <p>☑ 2 porções</p>
                         </div>
-                        <h3>FRANGO XADREZ</h3>
+                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
                     </div>
                 </div>
 
@@ -161,23 +161,23 @@
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>30min</p>
-                            <p>2 porções</p>
+                            <p>⏲30min</p>
+                            <p>☑ 2 porções</p>
                         </div>
-                        <h3>FRANGO XADREZ</h3>
+                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
                     </div>
                 </div>
 
-                <div class="card-prato cinco">
+                <div class="cinco">
                     <div class="img-salgados">
                         <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
                     </div>
-                    <div>
+                    <div class="descricao">
                         <div >
-                            <p>30min</p>
-                            <p>2 porções</p>
+                            <p>⏲30min</p>
+                            <p>☑ 2 porções</p>
                         </div>
-                        <h3>FRANGO XADREZ</h3>
+                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
                         <p>
                             Conta a história que o prato tem sua origem na província de Si Chuan, localizada na parte ocidental da China. Dentre os ingredientes que permanecem na receita até hoje estão o frango, o molho de soja (shoyu) e o amendoim. Os demais ingredientes podem variar de acordo com a região e o gosto do povo.
                         </p>
