Adiciona seção de pratos doces

--- a/index.html
+++ b/index.html
@@ -187,6 +187,84 @@
             </div>
         </div>
     </section>
+
+    <section class="section secondary-bg doces-sec" id="doces">
+        <div class="menu-spacing"></div>
+        <div class="menu-spacing"></div>
+        <div class="main-content">
+            <h2>Últimos pratos doces adicionados</h2>
+            <div class="grid-doces">
+                <div class="card-prato um">
+                    <div class="img-doces">
+                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>⏲35min</p>
+                            <p>☑ 8 porções</p>
+                        </div>
+                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                    </div>
+                </div>
+
+                <div class="card-prato dois">
+                    <div class="img-doces">
+                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>⏲35min</p>
+                            <p>☑ 8 porções</p>
+                        </div>
+                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                    </div>
+                </div>
+
+                <div class="card-prato tres">
+                    <div class="img-doces">
+                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>⏲35min</p>
+                            <p>☑ 8 porções</p>
+                        </div>
+                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                    </div>
+                </div>
+
+                <div class="card-prato quatro">
+                    <div class="img-doces">
+                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                    </div>
+                    <div>
+                        <div class="descricao">
+                            <p>⏲35min</p>
+                            <p>☑ 8 porções</p>
+                        </div>
+                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                    </div>
+                </div>
+
+                <div class="cinco">
+                    <div class="img-doces">
+                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                    </div>
+                    <div class="descricao">
+                        <div >
+                            <p>⏲35min</p>
+                            <p>☑ 8 porções</p>
+                        </div>
+                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                        <p>
+                            É a versão doce do famoso baozi – pãozinho feito no vapor com recheios salgados como carne de porco. Ele pode ser feito em diferentes formatos e é popular em toda a China, principalmente nas províncias ao norte. Pode ser encontrado também com outros recheios, como pasta de semente de pinhão, pasta de taro ou mesmo pasta de feijão preto
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
