Adiciona seção de envio de pratos

--- a/index.html
+++ b/index.html
@@ -264,6 +264,59 @@
 
             </div>
         </div>
+    </section >
+
+    <section class="section main-bg form" id="form">
+        <div class="menu-spacing"></div>
+        <div class="menu-spacing"></div>
+        <div class="enviar-prato main-content">
+        <div class="descrisao-form">
+            <h2>Envie seus pratos deliciosos</h2>
+            <p>
+                Participe e ajude a cada vez mais entregarmos diversidade em nossos bancos de receitas. 
+                Tem aquela receita chinesa deliciosa? mande pra gente e cada vez mais as todos nos ajudamos
+                a achar aquele prato ideal para uma bela refeição. 
+            </p>
+            <p class="mandarim">谢谢你！</p>
+        </div>
+
+        <div class="content-form">
+            <fieldset class="form-grid"> 
+                <legend>Submeter receita</legend>
+
+                <div class="form-group">
+                    <label for="nome-receita">Qual o nome da sua receita?</label>
+                    <input required type="text" name="nome-receita" id="nome-receita" placeholder="Frango xadrex, pão de feijão vermelho">
+                </div>
+
+                <div class="form-group">
+                    <label for="porcoes">Rende quantas porções?</label>
+                    <input type="number" name="porcoes" id="porcoes" placeholder="rendimento em porções">
+                </div>
+
+                <div class="form-group">
+                    <label for="time">Tempo médio para fazer?</label>
+                    <input type="time" name="time" id="time" placeholder="Leva aproximandamente quanto tempo?">
+                </div>
+
+                <div class="form-group full-width">
+                    <label for="ingredientes">ingredientes</label>
+                    <textarea required name="ingredientes" id="ingredientes" cols="30" rows="10" placeholder="ingredientes necessários"></textarea>
+                </div>
+
+                <div class="form-group full-width">
+                    <label for="modo-preparo">Modo de preparo</label>
+                    <textarea required name="modo-preparo" id="modo-preparo" cols="30" rows="10" placeholder="Descreva o modo de preparo"></textarea>
+                </div>
+
+                <div class="form-group full-width">
+                    <div class="align">
+                        <button type="submit">Enviar</button>
+                    </div>
+                </div>
+            </fieldset>
+        </div>
+    </div>
     </section>
 </body>
 
