Finaliza front-end de envio de partros

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <Aside class="menu">
+    <Aside class="menu ">
         <div class="sustein">
             <div class="menu-content main-content ">
 
@@ -311,13 +311,18 @@
 
                 <div class="form-group full-width">
                     <div class="align">
-                        <button type="submit">Enviar</button>
+                        <button type="submit" onclick="alert('Função ainda em desenvolvimento')">Enviar</button>
                     </div>
                 </div>
             </fieldset>
         </div>
     </div>
     </section>
+    <footer class="white-bg footer" id="footer">
+        <p><a target="_blank" rel="nofollow" href="https://jcdmeira.github.io">Feito com ❤ por Jean Carlos De Meira</a>
+        </p>
+    </footer>
+    <a class="back-to-top" href="#logo">TOP</a>
 </body>
 
 </html>
