Adiciona conteúdo aos pratos e ajustes nas medias

--- a/index.html
+++ b/index.html
@@ -120,53 +120,53 @@
             <div class="grid-salgados">
                 <div class="card-prato um">
                     <div class="img-salgados">
-                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                        <img src="./assets/img/lamen-chines.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>⏲30min</p>
-                            <p>☑ 2 porções</p>
+                            <p>⏲45min</p>
+                            <p>☑ 4 porções</p>
                         </div>
-                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
+                        <h3><a href="#salgados">Lamen chinês</a></h3>
                     </div>
                 </div>
 
                 <div class="card-prato dois">
                     <div class="img-salgados">
-                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                        <img src="./assets/img/bolinho-tofu.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>⏲30min</p>
-                            <p>☑ 2 porções</p>
+                            <p>⏲45min</p>
+                            <p>☑ 4 porções</p>
                         </div>
-                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
+                        <h3><a href="#salgados">Bolinho de tofu</a></h3>
                     </div>
                 </div>
 
                 <div class="card-prato tres">
                     <div class="img-salgados">
-                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                        <img src="./assets/img/camarao-chines.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
                             <p>⏲30min</p>
-                            <p>☑ 2 porções</p>
+                            <p>☑ 4 porções</p>
                         </div>
-                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
+                        <h3><a href="#salgados">Camarão à moda chinesa</a></h3>
                     </div>
                 </div>
 
                 <div class="card-prato quatro">
                     <div class="img-salgados">
-                        <img src="./assets/img/frango-xadrez.jpg" alt="prato pronto">
+                        <img src="./assets/img/rolinho-primavera.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>⏲30min</p>
-                            <p>☑ 2 porções</p>
+                            <p>⏲40min</p>
+                            <p>☑ 8 porções</p>
                         </div>
-                        <h3><a href="#salgados">FRANGO XADREZ</a></h3>
+                        <h3><a href="#salgados">ROLINHO PRIMAVERA</a></h3>
                     </div>
                 </div>
 
@@ -198,53 +198,53 @@
             <div class="grid-doces">
                 <div class="card-prato um">
                     <div class="img-doces">
-                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                        <img src="./assets/img/torta-de-ovos.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>⏲35min</p>
-                            <p>☑ 8 porções</p>
+                            <p>⏲50min</p>
+                            <p>☑ 12 porções</p>
                         </div>
-                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                        <h3><a href="#doces">Torta de ovo</a></h3>
                     </div>
                 </div>
 
                 <div class="card-prato dois">
                     <div class="img-doces">
-                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                        <img src="./assets/img/brioche-chines.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>⏲35min</p>
-                            <p>☑ 8 porções</p>
+                            <p>⏲60min</p>
+                            <p>☑ 10 porções</p>
                         </div>
-                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                        <h3><a href="#doces">Brioche chinês</a></h3>
                     </div>
                 </div>
 
                 <div class="card-prato tres">
                     <div class="img-doces">
-                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                        <img src="./assets/img/white-sugar-cake.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>⏲35min</p>
+                            <p>⏲240min</p>
                             <p>☑ 8 porções</p>
                         </div>
-                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                        <h3><a href="#doces">White Sugar Cake</a></h3>
                     </div>
                 </div>
 
                 <div class="card-prato quatro">
                     <div class="img-doces">
-                        <img src="./assets/img/pao-de-feijao-vermelho.jpg" alt="prato pronto">
+                        <img src="./assets/img/tang-yuan.jpg" alt="prato pronto">
                     </div>
                     <div>
                         <div class="descricao">
-                            <p>⏲35min</p>
-                            <p>☑ 8 porções</p>
+                            <p>⏲30min</p>
+                            <p>☑ 2 porções</p>
                         </div>
-                        <h3><a href="#doces">Pão de feijão vermelho</a></h3>
+                        <h3><a href="#doces">Tang yuan</a></h3>
                     </div>
                 </div>
 
