Corrige posições do menu responsivo

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <div class="teste"><a href="#salgados" class="nhac"></a></div>
                     <div class="teste"><a href="#doces" class="nhac"></a></div>
                     <div class="teste"><a href="#form" class="nhac"></a></div> -->
-                        <li><a href="#intro" class="nhac">...</a></li>
-                        <li><a href="#salgados" class="salgados"></a></li>
-                        <li><a href="#doces" class="doces"></a></li>
-                        <li><a href="#form" class="enviar"></a></li>
+                        <li><a href="#intro" class="nhac">.</a></li>
+                        <li><a href="#salgados" class="salgados">.</a></li>
+                        <li><a href="#doces" class="doces">.</a></li>
+                        <li><a href="#form" class="enviar">.</a></li>
                     </ul>
                 </nav>
             </div>
